# temple

./: .travis.yml  CMakeLists.txt  README.md
include/: numerals.hpp  temple.hpp
include/temple/: boolean.hpp  box.hpp  division.hpp  fixpoint.hpp  numeral.hpp  numerals.hpp  pair.hpp  predicate.hpp
src/: numeral_tests.cpp  numerals.cpp  tests.cpp
test/temple/: predicate.cpp
tests/: boolean.cpp  numeral.cpp  predicate.cpp
